more code restructure
